fixed spacing and margin issues in creatTasks, groupedTask, and task components

--- a/Client/src/Components/CreateTask/CreateTask.css
+++ b/Client/src/Components/CreateTask/CreateTask.css
@@ -88,7 +88,7 @@
       .create-task .right-box .create-task-add-button-container {
         display: flex;
         width: 32%;
-        justify-content: flex-end;
+        justify-content: center;
       }
 
 
